--- a/package.json
+++ b/package.json
@@ -17,28 +17,29 @@
     "babel-preset-react": "6.5.0",
     "babel-register": "6.9.0",
     "css-loader": "0.23.1",
-    "style-loader": "0.13.1",
-    "tape": "4.5.1",
-    "webpack": "1.13.1",
-    "webpack-combine-loaders": "2.0.0",
-    "webpack-dev-server": "1.14.1",
-    "react-facebook-login": "^3.4.3",
-    "react-redux": "^5.0.2",
-    "react-router": "^3.0.2",
-    "react-router-redux": "^4.0.7",
-    "lodash": "^4.17.4",
-    "redux": "^3.6.0",
-    "redux-logger": "^2.8.1",
-    "redux-thunk": "^2.2.0",
     "enzyme": "2.3.0",
     "express": "4.13.4",
     "extract-text-webpack-plugin": "1.0.1",
     "faucet": "0.0.1",
     "html-webpack-plugin": "2.22.0",
+    "lodash": "^4.17.4",
     "react-addons-test-utils": "15.1.0",
-    "react-hot-loader": "1.3.0"
+    "react-facebook-login": "^3.4.3",
+    "react-hot-loader": "^1.3.1",
+    "react-redux": "^5.0.2",
+    "react-router": "^3.0.2",
+    "react-router-redux": "^4.0.7",
+    "redux": "^3.6.0",
+    "redux-logger": "^2.8.1",
+    "redux-thunk": "^2.2.0",
+    "style-loader": "0.13.1",
+    "tape": "4.5.1",
+    "webpack": "1.13.1",
+    "webpack-combine-loaders": "2.0.0",
+    "webpack-dev-server": "1.14.1"
   },
   "dependencies": {
+    "babel": "^6.23.0",
     "babel-core": "6.9.1",
     "babel-loader": "6.2.4",
     "babel-preset-es2015": "6.9.0",
@@ -56,7 +57,7 @@
     "react-addons-test-utils": "15.1.0",
     "react-dom": "15.1.0",
     "react-facebook-login": "^3.4.3",
-    "react-hot-loader": "1.3.0",
+    "react-hot-loader": "^1.3.1",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.7",
