--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.7",
+    "react-sortable": "^1.2.0",
+    "react-sortable-items": "0.0.12",
     "react-stepzilla": "^4.3.4",
     "redux": "^3.6.0",
     "redux-logger": "^2.8.1",
