--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "promise": "^7.1.1",
     "react": "15.1.0",
     "react-addons-test-utils": "15.1.0",
+    "react-bootstrap": "^0.30.8",
     "react-datepicker": "^0.44.0",
     "react-dom": "15.1.0",
     "react-facebook-login": "^3.4.3",
