--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "extract-text-webpack-plugin": "1.0.1",
     "faucet": "0.0.1",
     "html-webpack-plugin": "2.22.0",
+    "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
     "promise": "^7.1.1",
     "react": "15.1.0",
