--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
     "promise": "^7.1.1",
+    "qs": "^6.7.0",
     "react": "15.1.0",
     "react-addons-test-utils": "15.1.0",
     "react-bootstrap": "^0.30.8",
@@ -61,6 +62,7 @@
     "react-dom": "15.1.0",
     "react-facebook-login": "^3.4.3",
     "react-hot-loader": "^1.3.1",
+    "react-loading": "0.0.9",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.7",
@@ -68,6 +70,7 @@
     "react-sortable-hoc": "^0.6.1",
     "react-sortable-items": "0.0.12",
     "react-stepzilla": "^4.3.4",
+    "react-toastr": "^2.8.2",
     "redux": "^3.6.0",
     "redux-logger": "^2.8.1",
     "redux-thunk": "^2.2.0",
